--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#floatingInput:focus + label {
+  background-color: transparent;
+  color: white;
+}
+
+#floatingInput:focus + label::after {
+  background-color: transparent; /* Slight highlight */
+}
+#floatingPassword:focus + label {
+  background-color: transparent;
+  color: white;
+}
+
+#floatingPassword:focus + label::after {
+  background-color: transparent; /* Slight highlight */
+}
+/* .floating-email .form-control {
+  color: red !important;
+} */
