--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+@media only screen and (max-width: 600px) {
+ .image {
+    display:none;
+ }
+  
+
+  
+}
+
+body {
+  margin: 0;
+
+}
+
+.container-fluid {
+  padding: 0;
+}
+
+.form-control {
+  padding: 1.375rem .75rem !important;
+  border-color: black!important; 
+  box-shadow: none !important;
+}
