--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,8 @@ body {
   padding: 0;
 }
 
-.form-control {
+/* .form-control {
   padding: 1.375rem .75rem !important;
   border-color: black!important; 
   box-shadow: none !important;
-}
+} */
