--- a/src/Registration/Style.css
+++ b/src/Registration/Style.css
@@ -1,61 +1,138 @@
+
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    
-    color: #ffffff;
-   
-  }
-  
-  .login-card {
-    width: 350px;
-    background-color: rgb(0,0,0,0.4);
-    
-  }
-  
-  .btn-link {
-    text-decoration: none;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .btn-warning {
-    font-weight: bold;
-  }
-  
-.change-placeholder {
- color: white;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1.7;
+  color: #c4c3ca;
+
+}
+p {
+  font-weight: 500;
+  font-size: 14px;
+
 }
 
-.signup-card {
-    background-color: rgb(0,0,0,0.4);
-    color: white;
-    border-radius: 10px;
-    padding: 20px;
-    width: 350px;
-    max-width: 90%;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-  }
+h4 {
+  font-weight: 600;
+}
+
+h6 span {
+  padding: 0 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.section {
+  position: relative;
+  width: 100%;
+ 
+}
+
+.full-height {
+  min-height: 100vh;
+}
+
+
+
+.card1 {
+  position: relative;
+  width: 440px;
+  max-width: 100%;
+  height: 400px;
+  margin-top: 60px;
+  display: grid;
+  perspective: 700px;
+
+}
+
+.card1-2 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+   transform-style: preserve-3d;
+  transition: all 600ms ease-out;
+  display: grid;
+  grid-template-areas: "frontAndBack";
+  backface-visibility: hidden;
+ 
   
+}
+
+
+
+.card1-2 div {
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+.card3,
+.card4 {
+  width: 100%;
+  height: 100%;
+  background-color: #2a2b38;
+  background-image: url('file:///C:/Users/Lenovo/Downloads/pat.svg');
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  background-size: 300%;
+  position: absolute;
+  border-radius: 6px;
+  left: 0;
+  top: 0;
   
+}
+.card3 {
+  grid-area: frontAndBack;
+}
+
+.card4 {
+  grid-area: frontAndBack;
+  transform: rotateY(-180deg);
+}
+
+
+
+.checkbox:checked~.card1 .card1-2 {
+  transform: rotateY(180deg);
+}
+
+.card3-1 {
+  position: absolute;
+  width: 100%;
+  padding: 0 35px;
+  top: 10%;
+ 
   
-  .btn-link {
-    text-decoration: none;
-    font-weight: bold;
-    cursor: pointer;
-  }
+}
+
+
+.form-group {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.form-style {
+  padding: 13px 20px;
+  padding-left: 55px;
+  height: 48px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #c4c3ca;
+  background-color: #1f2029;
+  border: none;
   
-  .btn-warning {
-    font-weight: bold;
-  }
-  
-  @media (max-width: 576px) {
-    .signup-card {
-      padding: 2rem 1.5rem;
-    }
-  
-    .btn-link {
-      font-size: 0.9rem;
-    }
-  }
-  
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
+}
+
+
+
+
+
+
