--- a/src/Registration/Style.css
+++ b/src/Registration/Style.css
@@ -1,6 +1,4 @@
 body {
- 
-
   color: #c4c3ca;
   background-image: url("../bg-svg-pic.svg");
   background-size: cover;
@@ -8,7 +6,6 @@ body {
   background-position: center;
   width: 100%;
   height: 100vh;
-  
 }
 p {
   font-weight: 500;
@@ -126,7 +123,7 @@ h6 span {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: hsl(0, 54%, 81%);
+  background-color: black;
   transition: 0.4s;
   border-radius: 25px;
 }
@@ -144,7 +141,7 @@ h6 span {
 }
 
 input:checked + .slider {
-  background-color: hsl(0, 54%, 81%);
+  background-color: black;
 }
 
 input:checked + .slider::before {
